# lorem-gen

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Paragraph.hpp  globals.hpp
source/: Paragraph.cpp
